fixed the visibility object

--- a/scss/_fred-defaults.scss
+++ b/scss/_fred-defaults.scss
@@ -178,8 +178,11 @@ $breakpoint-classname-prefix: "--q-";
 
 $breakpoint-xsmall:     25em;   // The mighty LG Android!
 $breakpoint-small:      30em;   // Portrait regular mobiles//480px
+$breakpoint-small-max:  47.99em;   // Portrait regular mobiles//480px
 $breakpoint-medium:     48em;   // Skinny 768px
+$breakpoint-medium-max: 59.99em;   // Skinny 768px
 $breakpoint-large:      60em;   // Desktop 960px
+$breakpoint-large-max:  74.99em;   // Desktop 960px
 $breakpoint-xlarge:     75em;   // Wide 1200px
 $breakpoint-xxlarge:    90em;   // Wide 1440px
 $breakpoint-xxxlarge:   120em;  // Full HD
@@ -220,7 +223,7 @@ $breakpoints:
         )
 ;
 
-
+$testing: "";
 
 // -----------------------------------------------------------------------------
 // Grid
